apps/nginx-sites/deployment-default-nginx-sites.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-sites
    environment: prod
  name: nginx-sites
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-sites
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-sites
        environment: prod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
                - amd64
      automountServiceAccountToken: true
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          mountPropagation: None
          name: nginx-config
          subPath: nginx.conf
        - mountPath: /etc/nginx/conf.d/default.conf
          mountPropagation: None
          name: nginx-config
          subPath: default.conf
        - mountPath: /etc/nginx/conf.d/brmartin.conf
          mountPropagation: None
          name: nginx-config
          subPath: brmartin.conf
        - mountPath: /code
          mountPropagation: HostToContainer
          name: code
          readOnly: true
      - image: php:8.5-fpm-alpine
        imagePullPolicy: IfNotPresent
        name: php-fpm
        ports:
        - containerPort: 9000
          name: fastcgi
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 101
          runAsNonRoot: false
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /code
          mountPropagation: HostToContainer
          name: code
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-sites-config
          optional: false
        name: nginx-config
      - name: code
        persistentVolumeClaim:
          claimName: nginx-sites-code-sw
