apps/nginx-sites/service-default-nginx-sites.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-sites
    environment: prod
  name: nginx-sites
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-sites
  sessionAffinity: None
  type: ClusterIP
