apps/nginx-sites/ingress-default-nginx-sites-martinilink.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: nginx-sites
    environment: prod
  name: nginx-sites-martinilink
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: martinilink.co.uk
    http:
      paths:
      - backend:
          service:
            name: nginx-sites
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - martinilink.co.uk
    secretName: wildcard-brmartin-tls
